--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ pytest-cov==2.4.0
 Faker==0.7.11
 passlib==1.7.1
 Flask-HTTPAuth==3.2.2
+marshmallow==2.13.5
+marshmallow-jsonschema==0.3.0
+simplejson==3.10.0
